--- a/Collaborative_RS.ipynb
+++ b/Collaborative_RS.ipynb
@@ -108,7 +108,7 @@
    ],
    "source": [
     "#loading the movies dataset\n",
-    "movies_data = pd.read_csv(\"movies.csv\")\n",
+    "movies_data = pd.read_csv(\"datasets\movies.csv\")\n",
     "movies_data.head()"
    ]
   },
@@ -207,7 +207,7 @@
    ],
    "source": [
     "# loading the ratings dataset\n",
-    "ratings_data = pd.read_csv(\"ratings.csv\")\n",
+    "ratings_data = pd.read_csv(\"datasets\ratings.csv\")\n",
     "ratings_data.head()"
    ]
   },
