content based recommender system

--- a/content_based_RS.ipynb
+++ b/content_based_RS.ipynb
@@ -116,7 +116,7 @@
    ],
    "source": [
     "#loading the movies dataset\n",
-    "movies_data = pd.read_csv(\"movies.csv\")\n",
+    "movies_data = pd.read_csv(\"datasets/movies.csv\")\n",
     "movies_data.head()"
    ]
   },
@@ -2166,7 +2166,7 @@
     }
    ],
    "source": [
-    "ratings_data = pd.read_csv(\"ratings.csv\")\n",
+    "ratings_data = pd.read_csv(\"datasets/ratings.csv\")\n",
     "ratings_data.head()"
    ]
   },
