--- a/movie_segmentation.ipynb
+++ b/movie_segmentation.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "#Reading the movies data\n",
-    "movies = pd.read_csv(\"movies.csv\")"
+    "movies = pd.read_csv(\"datasets/movies.csv\")"
    ]
   },
   {
