--- a/recommender_system.ipynb
+++ b/recommender_system.ipynb
@@ -116,7 +116,7 @@
    ],
    "source": [
     "# loading the movies dataset\n",
-    "movies_data = pd.read_csv(\"movies.csv\")\n",
+    "movies_data = pd.read_csv(\"datasets/movies.csv\")\n",
     "movies_data.head()"
    ]
   },
