--- a/recommender_system.ipynb
+++ b/recommender_system.ipynb
@@ -2207,7 +2207,7 @@
     }
    ],
    "source": [
-    "ratings_data = pd.read_csv(\"ratings.csv\")\n",
+    "ratings_data = pd.read_csv(\"datasets/ratings.csv\")\n",
     "ratings_data.head()"
    ]
   },
